[package]
name = "charger-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.51"
lambda_runtime = "0.6.0"
lambda_http = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.22"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
