[package]
name = "check_charger"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.6.0"
lambda_http = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
