[package]
name = "check_charger"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
async-trait = "0.1.51"
lambda_runtime = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
aws-sdk-ses = "0.17.0"
futures = "0.3.23"
