[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "0.17.0"
aws-config = "0.47.0"
lambda_http = { version = "0.6.0", features = ["apigw_http"] }
reqwest = { version = "0.11.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
