[package]
name = "get_chargers"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
lambda_runtime = "0.6.0"
lambda_http = { version = "0.6.0", features = ["apigw_http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.47.0"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
